--- a/index.html
+++ b/index.html
@@ -401,6 +401,7 @@
     <div class="center"><a href="#" class="opacity-8">Available <svg style="height:21px;"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#apple"></use></svg> iPhone</a></div>
   </div>
 </nav>
+	<h1> 2020@copyrighted material | prohibited to us </h1>
 
 <!-- Loading Progress Bar -->
 <div class="progress-bar blue"></div>
